assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Lato, sans-serif;
    font-weight: 300;
    color: #3a3a3a;
}

/* headings & logo*/
h1, h2 {
    font-family: Oswald, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    color: #252525;
}
#logo {
    float: left;
    font-size: 250%;
}
/* navigatin links */
ul {
    font-size: 110%;
    letter-spacing: 4px;
    line-height: 75px;
}

li{
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

li a {
    text-decoration: none;
    color: inherit;
}

li a:hover {
    border-bottom: 1px solid #3a3a3a;
}
.active {
    border-bottom: 1px solid #3a3a3a;
}

/* main image-edinburgh */

#edinburgh-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#cover-text, #cover-text h2 {
    color: #fff;
}

#edinburgh-image {
    height: 600px;
    width: 100%;
    background: url(../images/edinburgh-city.jpeg) no-repeat center fixed;
    background-size: cover;

/* animates zoom effects on loading page */
animation-name: edinburgh-zoom;
animation-duration: 3s ;
animation-fill-mode: backwards;
}
/* creates the level of zoom for edinburgh image */
@keyframes edinburgh-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1);
    }
}

#cover-text {
    font-size: 140%;
    font-family: Oswald, sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;

    width: 300px;
    height: 150px;
    

    padding-top: 40px;
    padding-left: 10px;

    background-color: rgba(183, 132, 21, 0.876);

    bottom: 60px;
    right: 100px;
}

/* main contents */
#main {
    width: 600px;
    margin: 0 auto;
    margin-top: 30px; 
}

#title {
    text-align: center;
    font-size: 3.5rem;
    font-weight: bold;
}
p {
    text-align: center;
    font-size: 1.25rem;
    font-weight: 300;
}
.tours {
    display: flex;
    
}

.tour-item {
    width: 1000px;
    height: 250px;
    border: 1px solid black;
    margin: 10px;
    border-radius: 5px;
    text-align: center;
    padding: 20px;
    margin-bottom: 50px;
    margin-top: 2px; 
}

.tour-item-title {
    font-size: 1.5rem;
    font-weight: bold;
    text-align: center;
    height: 40px;
    line-height: 40px;
    border-bottom: 1px solid black;
    margin: 0 auto;
}

.tour-item-button {
    padding: 0.5rem 1rem;
    font-size: 1.25rem;
    line-height: 1.5;
    border-radius: .3rem;
    color: rgb(90, 22, 22);
    background-color: transparent;
    background-image: none;
    border-bottom: rgb(90, 22, 22);
    margin-top: 50px;
    display: inline-block;
    transition-duration: 0.3s;
    cursor: pointer;
}

.tour-item-price {
    font-size: 2.5rem;
    font-weight: bold;
    padding: 20px;
}

.tour-item-button--active {
    background-color:  rgb(77, 10, 10);
    color: whitesmoke;
}
.tour-item-button:hover {
    background-color: brown;
    color: whitesmoke;
}

/* contact */
#contact {
    margin-bottom: 100px;
}
.contact-boxes-container {
    width: 66%;
    margin: 0 auto;
}
.contact-box-left {
    width: 250px;
    margin-top: 50px;
    float: left;
}
.contact-box-right {
    width: 250px;
    text-align: right;
    margin-top: 50px;
    float: right;
}
.spacer {
    clear: both;
}
.contact-box-center {
    width: 250px;
    height: 250px;
    margin: 30px auto;
    text-align: center;
}
h3 {
    font-size: 20px;
    font-weight: bolder;
}
th, td {
    border-bottom: 1px solid black;
}
ul {
    padding: 0;
}
.text-center {
    text-align: center;
}
.text-right {
    text-align: right;
}

.bold {
    font-weight: bold;
}
h3 {
    font-weight: bold;
}

/* footer */
footer {
    background-color: rgb(113, 95, 227);
    padding: 1em;
    text-align: center;
    width: 100%;
    position: fixed;
    bottom: 0;
    right: 0;
    z-index: 3;
}

footer > span { 
    color: whitesmoke;
}
footer > a {
    color: whitesmoke;
    text-decoration: none;
    padding: 0 15px;
    font-size: 1rem;
}

